# fem-dev

./: .clang-format  .gitignore  CMakeLists.txt  assemble.cpp  assemble.hpp  bc.cpp  bc.hpp  cg.hpp  matrix.hpp  mesh2d.cpp  mesh2d.hpp  mesh2d_example.cpp  poisson_kernel.cpp  poisson_kernel.hpp  ref_T3.cpp  ref_T3.hpp
meshes/: rectangle.msh  test_mesh.msh
py/: CG.py  DLanzcos.py  assemble.py  bc.py  create_mesh.py  fem-poisson-1d.ipynb  fem-poisson-2d.ipynb  gmres.py  main.py  mesh.py  poisson_kernel.py  ref_T3.py
tests/: test_poisson_kernel.cpp  test_poisson_solver.cpp  tests.cpp
tests/test_data/: fixed_nodes_test.txt  fixed_values_test.txt  free_values_test.txt  full_matrix_flattened_test.txt  full_rhs_flattened_test.txt  reduced_matrix_flattened_test.txt  reduced_rhs_flattened_test.txt  solution_test.txt
